# rp1-jtag

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/actions/build-rp1jtag/: action.yml
.github/workflows/: ci.yml  deb-openfpgaloader.yml  deb-rp1jtag.yml  hardware-test.yml  openocd.yml  static-openfpgaloader.yml
benchmarks/: RESULTS.md  bench_rpi3_bcm2835gpio.sh  bench_rpi5_rp1jtag.sh  bench_rpi5_sysfsgpio.sh  rpi5-sysfsgpio.cfg
debian/: changelog  control  copyright  librp1jtag-dev.install  librp1jtag0.install
docs/plans/: 2026-02-23-phase2-xvc-benchmarks-design.md  2026-02-23-phase2-xvc-benchmarks-plan.md  2026-02-27-high-speed-dma-rewrite-design.md  2026-02-27-high-speed-dma-rewrite-plan.md  2026-02-28-bulk-dma-performance.md
drivers/openfpgaloader/: README.md  integrate.py  rp1PioJtag.cpp  rp1PioJtag.hpp
drivers/openocd/: README.md  integrate.py  netv2_35t.cfg  netv2_35t_spi.cfg  netv2_spiflash.sh  rp1_pio_jtag.c
examples/: CMakeLists.txt  idcode_read.c
lib/: CMakeLists.txt  rp1jtag.pc.in
lib/include/: rp1_jtag.h
lib/src/: pio_backend.h  pio_backend_mock.c  pio_backend_rp1.c  rp1_jtag.c  rp1_jtag_internal.h
lib/src/pio/: jtag_loopback.pio  jtag_shift.pio  jtag_shift_fast.pio  jtag_target.pio  jtag_tms.pio
tests/: CMakeLists.txt
tests/hardware/: CMakeLists.txt  bench_dma_loopback.c  bench_throughput.c  test_bitstream.c  test_dma_explore.c  test_dma_sweep.c  test_gpio_loopback.c  test_idcode.c  test_many_shifts.c  test_pio_loopback.c  test_pio_minimal.c  test_single_shift.c  test_target_loopback.c
tests/pio_sim/: CMakeLists.txt  pio_sim.c  pio_sim.h  test_bit_ordering.c  test_jtag_shift.c  test_jtag_shift_fast.c  test_jtag_tms.c  test_pio_sim.c
tests/unit/: CMakeLists.txt  test_data_packing.c  test_dma_buffer_packing.c  test_fifo_interleave.c  test_tms_splitting.c
xvc/: CMakeLists.txt  README.md  test_xvc_idcode.py  xvc_server.c
